# qs-cbot

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
pbf/: cqhttp_api.proto  cqhttp_base.proto  cqhttp_event.proto
pbf/built/: cqhttp_api.pb.cc  cqhttp_api.pb.h  cqhttp_base.pb.cc  cqhttp_base.pb.h  cqhttp_event.pb.cc  cqhttp_event.pb.h
src/: server.cpp  server.h
src/bot/: Bot.cpp  Bot.h
src/bot/actions/: Actions.cpp  Actions.h
src/bot/resp/: AccountInfo.cpp  AccountInfo.h  ForwardMessageResp.cpp  ForwardMessageResp.h  FriendListResp.cpp  FriendListResp.h  GroupForwardMsgResp.cpp  GroupForwardMsgResp.h  GroupInfoResp.cpp  GroupInfoResp.h  GroupListInfoResp.cpp  GroupListInfoResp.h  GroupMemberInfoResp.cpp  GroupMemberInfoResp.h  GroupMessageResp.cpp  GroupMessageResp.h  ImageInfoResp.cpp  ImageInfoResp.h  Message.cpp  Message.h  MessageResp.cpp  MessageResp.h  PrivateMessageResp.cpp  PrivateMessageResp.h  QidAccountInfo.cpp  QidAccountInfo.h  RespBody.cpp  RespBody.h  StrangerInfoResp.cpp  StrangerInfoResp.h  UniDirectionalFriendListResp.cpp  UniDirectionalFriendListResp.h
src/event/: eventframe.cpp  eventframe.h  eventhandler.cpp  eventhandler.h
src/event/message/: GroupMessageEvent.cpp  GroupMessageEvent.h  MessageEvent.cpp  MessageEvent.h  PrivateMessageEvent.cpp  PrivateMessageEvent.h
src/event/notice/: ClientStatusEvent.cpp  ClientStatusEvent.h  EssenceEvent.cpp  EssenceEvent.h  FriendAddEvent.cpp  FriendAddEvent.h  FriendRecallEvent.cpp  GroupAdminEvent.h  (+20 more)
src/msg/: Msg.cpp  Msg.h
src/ws/: WebsocketController.cpp  WebsocketController.h
(+6 files in other folders)
